[gd_scene load_steps=11 format=3 uid="uid://d02s1w7xl3xen"]

[ext_resource type="Theme" uid="uid://f6j43443fvfv" path="res://assets/our_themes/ui.tres" id="1_0tlif"]
[ext_resource type="Script" path="res://ui/slushies.gd" id="1_jsebp"]
[ext_resource type="Texture2D" uid="uid://dg32q6d1bt4sn" path="res://assets/OurAssets/Props.png" id="1_uk5io"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1umlj"]
atlas = ExtResource("1_uk5io")
region = Rect2(33, 50, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_emd1u"]
atlas = ExtResource("1_uk5io")
region = Rect2(0, 50, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y6yh"]
atlas = ExtResource("1_uk5io")
region = Rect2(16, 50, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tct2"]
atlas = ExtResource("1_uk5io")
region = Rect2(16, 66, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_heavs"]
atlas = ExtResource("1_uk5io")
region = Rect2(33, 66, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o4ty"]
atlas = ExtResource("1_uk5io")
region = Rect2(0, 66, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_67ux1"]
atlas = ExtResource("1_uk5io")
region = Rect2(0, 82, 16, 16)

[node name="Slushies" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jsebp")

[node name="MenuBacksplash" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 104.0
offset_bottom = 207.0
theme = ExtResource("1_0tlif")

[node name="MarginContainer" type="MarginContainer" parent="MenuBacksplash"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MenuBacksplash/MarginContainer"]
layout_mode = 2
columns = 2

[node name="Blue" type="TextureRect" parent="MenuBacksplash/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_1umlj")
expand_mode = 2
stretch_mode = 5

[node name="BlueLabel" type="Label" parent="MenuBacksplash/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Red" type="TextureRect" parent="MenuBacksplash/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_emd1u")
expand_mode = 2
stretch_mode = 5

[node name="RedLabel" type="Label" parent="MenuBacksplash/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Green" type="TextureRect" parent="MenuBacksplash/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_5y6yh")
expand_mode = 2
stretch_mode = 5

[node name="GreenLabel" type="Label" parent="MenuBacksplash/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Cyan" type="TextureRect" parent="MenuBacksplash/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_8tct2")
expand_mode = 2
stretch_mode = 5

[node name="CyanLabel" type="Label" parent="MenuBacksplash/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Purple" type="TextureRect" parent="MenuBacksplash/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_heavs")
expand_mode = 2
stretch_mode = 5

[node name="PurpleLabel" type="Label" parent="MenuBacksplash/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Yellow" type="TextureRect" parent="MenuBacksplash/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_4o4ty")
expand_mode = 2
stretch_mode = 5

[node name="YellowLabel" type="Label" parent="MenuBacksplash/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="White" type="TextureRect" parent="MenuBacksplash/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_67ux1")
expand_mode = 2
stretch_mode = 5

[node name="WhiteLabel" type="Label" parent="MenuBacksplash/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
